--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Rock Paper Scissors Game</h1>
     <div class="choices">
         <div class="choice">
-            <img src="/images/rock.png" alt="Rock" id="rock">
+            <img src="F:\web dev projects\stone-paper-scissors-game\images\rock.png" alt="rock" id="rock">
             <p>Rock</p>
         </div>
         <div class="choice">
-            <img src="/images/paper.png" alt="Paper" id="paper">
+            <img src="F:\web dev projects\stone-paper-scissors-game\images\paper.png" alt="Paper" id="paper">
             <p>Paper</p>
         </div>
         <div class="choice">
-            <img src="/images/scissors.png" alt="Scissors" id="scissors">
+            <img src="F:\web dev projects\stone-paper-scissors-game\images\scissors.png" alt="Scissors" id="scissors">
             <p>Scissors</p>
         </div>
     </div>
